--- a/aboutme/byui.html/styles/styles.css
+++ b/aboutme/byui.html/styles/styles.css
@@ -10,6 +10,7 @@ nav {
     color: steelblue;
 }
 a{
+    font-size: 1.5em;
     color: white;
     margin: 40px;
 }
@@ -17,10 +18,11 @@ h1{
     color: steelblue;
 }
 img{
-    width: 800px;
+    width: 80%;
     border: 4px solid steelblue;
 }
 p{
+    width: 80%;
     padding: 10px;
 }
 footer{
