--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -2,7 +2,22 @@
     margin: 0 auto;
     max-width: 1600px
 }
-nav a, #hero-msg h1, #hero-msg h4, .button-box, main section{
+main section{
+    text-align: center;
+    text-decoration: none;
+}
+main section img{
+    box-sizing: border-box;
+}
+#hero-msg h1{
+    text-align: center;
+    text-decoration: none;
+}
+#hero-msg h4{
+    text-align: center;
+    text-decoration: none;
+}
+.button-box{
     text-align: center;
     text-decoration: none;
 }
@@ -12,28 +27,54 @@ nav a, #hero-msg h1, #hero-msg h4, .button-box, main section{
 }
 body{
     background-color: #ffff;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
+}
+h2{
+    margin: 0;
 }
 header{
     background-color: #7ea3cc;
+}
+nav a{
+    text-align: center;
+    text-decoration: none;
+    padding: 35px;
 }
 nav a:hover{
     background-color: #ffff;
 }
 .book, .join{
     background-color: #f6e851;
+    color: #000000;
     text-decoration: none;
+    padding: 15px 30px;
+    margin: 50px 0 0 0;
+    margin-top: 50px;
+    border-radius: 5px; 
+    font-size: 18px;
 }
 .book:hover, .join:hover{
     background-color: #7ea3cc;
 }
 .msg{
     background-color: #7ea3cc;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer{
     background-color: #ffff;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+footer .social img{
+    padding-top: 15px;
 }
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 .logo{
     width: 80px;
@@ -46,4 +87,23 @@ footer h3 a:hover{
 }
  a {
     text-decoration: none;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin:     200px 0;
+    text-align: center;
+}
+.home-title {
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+.msg p{
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+#logo_link{
+    padding: 5px;
+}
+.card-img{
+    border: 10px solid #000000;
 }
