--- a/positionstyles.css
+++ b/positionstyles.css
@@ -32,31 +32,32 @@ grid-column: 1/3;
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
-  display: grid;
-  grid-template-columns: 50px 50px 50px 50px;
 }
 .red2 {
 width: 100px; 
 height: 100px; 
-background-color: red; 
+background-color: red;
+margin-bottom: -50px; 
 } 
 .green2 { 
 width: 100px; 
 height: 100px; 
 background-color: green; 
-margin-top: 50px;
+margin-left: 50px;
+margin-bottom: -50px;
 } 
 .yellow2 {
 width: 100px; 
 height: 100px; 
 background-color: gold; 
-margin-top: 100px;
+margin-left: 100px;
 } 
 .blue2 {
 width: 100px; 
 height: 100px; 
 background-color: blue; 
-margin-top: 150px;
+margin-left: 150px;
+margin-top: -50px;
 } 
 /* Activity 3 styles */ 
 .content3 {
@@ -72,13 +73,13 @@ background-color: red;
 grid-column: 1/3;
 } 
 .green3 {
-width: 300px; 
-height: 100px; 
+width: 100%; 
+height: 200px; 
 background-color: green;
 } 
 .yellow3 {
-width: 300px; 
-height: 100px; 
+width: 100%; 
+height: 200px; 
 background-color: gold; 
 } 
 .blue3 {
@@ -95,30 +96,29 @@ grid-column: 1/3;
   grid-template-columns: 1fr 1fr; 
 }
 .red4 {
-width: 300px; 
+width: 100%; 
 height: 100%; 
 background-color: red; 
 grid-row: 1/4;
 } 
 .green4 {
-width: 350px; 
-height: 150px; 
+width: 100%; 
+height: 100%; 
 background-color: green; 
 } 
 .yellow4 {
-width: 350px; 
-height: 150px; 
+width: 100%; 
+height: 100%; 
 background-color: gold; 
 } 
 .blue4 {
-width: 350px; 
-height: 150px; 
+width: 100%; 
+height: 100%; 
 background-color: blue; 
 } 
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
-   height: 400px;
 }
 .red5 { 
 width: 100%; 
@@ -133,7 +133,7 @@ float: left;
 } 
 .yellow5 {
 width: 100%; 
-height: 350px; 
+height: 100%; 
 background-color: gold; 
 } 
 .blue5 {
@@ -145,7 +145,7 @@ background-color: blue;
 .content6 {
   /* This is the parent of the activity 6 boxes. */
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 100px 100px;
 }
 .red6 {
 width: 400px; 
@@ -156,7 +156,7 @@ grid-row: 1/3;
 z-index: -1;
 } 
 .green6 {
-width: 300px; 
+width: 200px; 
 height: 200px; 
 background-color: green; 
 grid-column: 1/3;
@@ -167,7 +167,7 @@ z-index: 2;
 width: 200px; 
 height: 400px; 
 background-color: gold; 
-grid-column: 5/7;
+grid-column: 4/7;
 grid-row: 3/7;
 z-index: 2;
 } 
@@ -183,7 +183,7 @@ z-index: 1;
 
 /* Do not make any changes below here */
 .activity {
-width: 600px; 
+width: 70%; 
 margin: 20px auto; 
 font-family: Arial, sans-serif; 
 border: 1px solid black; 
