--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Rock+Salt&display=swap');
 #content {
     margin: 0 auto;
     max-width: 1600px
