--- a/positionstyles.css
+++ b/positionstyles.css
@@ -145,39 +145,39 @@ background-color: blue;
 .content6 {
   /* This is the parent of the activity 6 boxes. */
   display: grid;
-  grid-template-columns: 100px 100px;
+  grid-template-columns: repeat (6, 100px);
 }
 .red6 {
-width: 400px; 
-height:200px; 
+width: 600px; 
+height:300px; 
 background-color: red; 
 grid-column: 1/5;
 grid-row: 1/3;
-z-index: -1;
+z-index: 1;
 } 
 .green6 {
-width: 200px; 
-height: 200px; 
+width: 300px; 
+height: 300px; 
 background-color: green; 
 grid-column: 1/3;
 grid-row: 5/7;
-z-index: 2;
+z-index: 3;
 } 
 .yellow6 {
-width: 200px; 
-height: 400px; 
+width: 300px; 
+height: 600px; 
 background-color: gold; 
-grid-column: 4/7;
+grid-column: 5/7;
 grid-row: 3/7;
-z-index: 2;
+z-index: 3;
 } 
 .blue6 {
-width: 400px; 
-height: 400px; 
+width: 600px; 
+height: 600px; 
 background-color: blue; 
 grid-column: 2/6;
 grid-row: 2/6;
-z-index: 1;
+z-index: 2;
 } 
 
 
