--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -10,13 +10,30 @@ main section{
 main section img{
     box-sizing: border-box;
 }
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #hero-msg h1{
     text-align: center;
     text-decoration: none;
+    color: #ffff;
 }
 #hero-msg h4{
     text-align: center;
     text-decoration: none;
+    color: #ffff;
 }
 .button-box{
     text-align: center;
@@ -25,6 +42,8 @@ main section img{
 #background{
     height: 725px;
     background-color: #f6e851;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body{
     background-color: #ffff;
@@ -37,9 +56,13 @@ h2{
     margin: 0;
 }
 header{
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: #7ea3cc;
 }
 nav a{
+    display: flex;
+    justify-content: space-around;
     text-align: center;
     text-decoration: none;
     padding: 35px;
@@ -67,11 +90,17 @@ nav a:hover{
     background-color: #7ea3cc;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 footer{
+    display: flex;
     background-color: #7ea3cc;
     padding: 25px 50px;
     margin-top: 200px;
+    justify-content: space-around;
+    align-items: center;
 }
 footer .social img{
     padding-top: 15px;
@@ -92,9 +121,23 @@ footer h3 a:hover{
  a {
     text-decoration: none;
 }
-.rivers-card, .camping-card, .rapids-card {
+.rapids-card {
     margin:     200px 0;
     text-align: center;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.camping-card{
+    margin:     200px 0;
+    text-align: center;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rivers-card{
+    margin:     200px 0;
+    text-align: center;
+    grid-column: 2/4;
+    grid-row: 2/3;
 }
 .home-title {
     font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
@@ -106,8 +149,65 @@ footer h3 a:hover{
     padding-bottom: 15px;
 }
 #logo_link{
+    padding-top: 5px;
     padding: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .card-img{
+    width: 100%;
     border: 10px solid #000000;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
