--- a/heatsolutions/styles/site-plan.css
+++ b/heatsolutions/styles/site-plan.css
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Teko Bold";
-  --paragraph-font: open-sans, Helvetica, sans-serif;
+  --paragraph-font: 'open sans';
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #a4643e;  /* headlines on a white background */ 
