--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,84 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@400;700&display=swap');
 #content {
     margin: 0 auto;
     max-width: 1600px
 }
-main section{
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+ nav a {
     text-align: center;
     text-decoration: none;
-}
-main section img{
+    padding: 35px;
+ }
+ nav a:hover{
+    background-color: #ffff;
+ }
+ .msg {
+    background-color: #7ea3cc;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+ }
+ .msg p {
+    font-size: .8em;
+    padding-bottom: 15px;
+ }
+ .msg h2 {
+    font-family: 'Permanent Marker', cursive;
+ }
+ #hero-msg h1 {
+    text-align: center;
+ }
+ #hero-msg h4 {
+    text-align: center;
+ }
+ .button-box {
+    text-align: center;
+ }
+ main section {
+    text-align: center;
+ }
+ main section img {
     box-sizing: border-box;
-}
-#hero-box{
-    grid-column: 1/4;
-    grid-row: 1/3;
-    z-index: -1;
-}
-#hero{
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px;
-}
-#hero-msg{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top: 100px;
-}
-#hero-msg h1{
-    text-align: center;
-    text-decoration: none;
-    color: #ffff;
-}
-#hero-msg h4{
-    text-align: center;
-    text-decoration: none;
-    color: #ffff;
-}
-.button-box{
-    text-align: center;
-    text-decoration: none;
-}
-#background{
+ }
+#background {
     height: 725px;
     background-color: #f6e851;
     grid-column: 1/11;
     grid-row: 4/9;
 }
-body{
+body {
     background-color: #ffff;
-    font-family: Raleway, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 22px;
+    margin: 0;
     padding: 0;
-    margin: 0;
 }
-h2{
-    margin: 0;
-}
-header{
+header {
+    background-color: #7ea3cc;
     display: grid;
     grid-template-columns: 150px auto;
-    background-color: #7ea3cc;
 }
-nav a{
+footer {
+    background-color: #7ea3cc;
+    padding: 25px 50px;
+    margin-top: 200px;
     display: flex;
     justify-content: space-around;
-    text-align: center;
+    align-items: center;
+}
+footer a {
     text-decoration: none;
-    padding: 35px;
 }
-nav a:hover{
-    background-color: #ffff;
+footer .social img {
+    padding-top: 15px;
 }
-.book, .join{
+.book {
     background-color: #f6e851;
-    color: #000000;
     text-decoration: none;
-    padding: 15px 30px;
-    margin: 50px 0 0 0;
-    margin-top: 50px;
-    border-radius: 5px; 
     font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.join {
+    background-color: #f6e851;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover{
     background-color: #7ea3cc;
@@ -86,90 +98,65 @@ nav a:hover{
 .join:hover{
     background-color: #ffff;
 }
-.msg{
-    background-color: #7ea3cc;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-footer{
-    display: flex;
-    background-color: #7ea3cc;
-    padding: 25px 50px;
-    margin-top: 200px;
-    justify-content: space-around;
-    align-items: center;
-}
-footer .social img{
-    padding-top: 15px;
-}
-.icon{
-    width: 80px;
-    padding-top: 10px;
-}
-.logo{
+.logo {
     width: 80px;
 }
-#hero-img{
-    width: 100%;
-}
-footer h3 a:hover{
-    text-decoration: underline;
-}
- a {
-    text-decoration: none;
-}
-.rapids-card {
-    margin:     200px 0;
-    text-align: center;
-    grid-column: 8/10;
-    grid-row: 2/3;
-}
-.camping-card{
-    margin:     200px 0;
-    text-align: center;
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-.rivers-card{
-    margin:     200px 0;
-    text-align: center;
-    grid-column: 2/4;
-    grid-row: 2/3;
-}
-.home-title {
-    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
-    font-size: 2em;
-    margin-top: 10px;
-}
-.msg p{
-    font-size: .8em;
-    padding-bottom: 15px;
-}
-#logo_link{
+#logo-link {
     padding-top: 5px;
-    padding: 5px;
     justify-self: center;
     align-self: center;
 }
-.card-img{
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+#hero-img {
+    width: 100%
+}
+.home-title {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 2em;
+    margin-top: 10px;
+}
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+h2 {
+    margin: 0;
+}
+.rivers-card {
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.card-img {
+    border: 10px solid #000;
     width: 100%;
-    border: 10px solid #000000;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.card-img:hover{
+.card-img:hover {
     opacity: .6;
     transform: scale(1.1);
 }
-.mountains{
+.mountains {
     width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -184,12 +171,22 @@ footer h3 a:hover{
     }
     #hero {
         margin-top: 0;
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr;
+        margin-top: -100px;
     }
     #hero-msg {
-        margin-top: 0;
+        margin-top: 100px;
+        grid-column: 2/3;
+        grid-row: 1/2;
     }
     #hero-msg h4 {
         display: none;
+    }
+    #hero-box {
+        grid-column: 1/4;
+        grid-row: 1/3;
+        z-index: -1;
     }
     .home-title {
         font-size: 25px;
