--- a/heatsolutions/styles/styles.css
+++ b/heatsolutions/styles/styles.css
@@ -37,17 +37,40 @@ header{
     margin: 0 auto;
     max-width: 1600px
 }
-nav {
-    display: flex;
-    justify-content: space-around;
-}
- nav a {
+nav{
     text-align: center;
+}
+ .dropbtn {
+    background-color: #f07c17;
+    color: white;
+    padding: 16px;
+    font-size: 32px;
+    border: none;
+ }
+ .dropdown {
+    position: relative;
+    display: inline-block;
+ }
+ .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: #000;
+    padding: 12px 16px;
     text-decoration: none;
- }
- nav a:hover{
-    background-color: #ffff;
- }
+    display: block;
+  }
+  .dropdown-content a:hover {background-color: #ddd;}
+  .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropbtn {background-color: #d1dee6;
+    color: #000;
+}
+
  .logo {
     width: 200px;
     align-items: center;
@@ -65,7 +88,7 @@ nav {
 .desert{
     width: 400px;
     grid-column: 7/10;
-    grid-row: 4/5;
+    grid-row: 3/5;
 }
 footer{
     background-color: #a4643e;
