edited dropdown menu

--- a/heatsolutions/styles/styles.css
+++ b/heatsolutions/styles/styles.css
@@ -28,6 +28,7 @@ p{
     background-color: #d1dee6;
 }
 header{
+    display: grid;
     background-color: #a4643e;
     grid-template-columns: 150px auto;
     font-size: 30px;
@@ -38,7 +39,8 @@ header{
     max-width: 1600px
 }
 nav{
-    text-align: center;
+    justify-self: end;
+    align-self: center;
 }
  .dropbtn {
     background-color: #f07c17;
@@ -55,9 +57,11 @@ nav{
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    text-align: left;
+    width: max-content;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+}
   }
   .dropdown-content a {
     color: #000;
