--- a/heatsolutions/styles/styles.css
+++ b/heatsolutions/styles/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Teko:wght@400;700&display=swap');
-.msg{
+h1 , h2{
     font-family: 'Teko', sans-serif;
     color: #a4643e;
 }
@@ -21,9 +21,32 @@
     grid-row: 2/3;
     font-size: 30px;
 }
-p{
-    font-family: 'Open Sans', sans-serif;;
+.prevention-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
+.prevention-grid h1{
+    grid-column: 2/4;
+}
+.hydration{
+    grid-column: 4/6;
+    grid-row: 2/4;
+}
+.water{
+    grid-row: 2/4;
+}
+.hat{
+    grid-column: 4/6;
+    grid-row: 4/6;
+}
+.helpful{
+    grid-column: 1/3;
+    grid-row: 4/6;
+}
+p{
+    font-family: 'Open Sans', sans-serif;
+}
+
 #content{
     background-color: #d1dee6;
 }
@@ -62,7 +85,7 @@ nav{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-  }
+
   .dropdown-content a {
     color: #000;
     padding: 12px 16px;
