--- a/heatsolutions/styles/styles.css
+++ b/heatsolutions/styles/styles.css
@@ -36,12 +36,39 @@ h1 , h2{
     grid-row: 2/4;
 }
 .hat{
-    grid-column: 4/6;
+    margin-right: 100px;
+    grid-column: 4/5;
     grid-row: 4/6;
 }
 .helpful{
     grid-column: 1/3;
     grid-row: 4/6;
+}
+.illness-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.sick{
+    grid-row: 2/3;
+}
+.headache{
+    grid-column: 4/5;
+    grid-row: 3/6;
+}
+.illness-grid h1{
+    grid-column: 2/4;
+}
+.cramps{
+    grid-column: 4/6;
+    grid-row: 2/3;
+}
+.exhaustion{
+    grid-column: 1/2;
+    grid-row: 3/6;
+}
+.stroke{
+    grid-column: 4/6;
+    grid-row: 6/8;
 }
 p{
     font-family: 'Open Sans', sans-serif;
@@ -66,6 +93,7 @@ nav{
     align-self: center;
 }
  .dropbtn {
+    margin-right: 100px;
     background-color: #f07c17;
     color: white;
     padding: 16px;
