--- a/heatsolutions/styles/styles.css
+++ b/heatsolutions/styles/styles.css
@@ -7,20 +7,18 @@ h1 , h2{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-.home-grid h1{
-    grid-column: 4/6;
-    font-size: 50px;
-}
-.home-grid p{
-    grid-column: 4/6;
-    grid-row: 3/4;
-    font-size: 20px;
-}
-.home-grid h2{
+.desert{
+    grid-row: 4/6;
     grid-column: 3/5;
-    grid-row: 2/3;
-    font-size: 30px;
 }
+.home{
+    grid-column: 3/5;
+    grid-row: 2/4;
+}
+.sun{
+    grid-row: 2/4;
+}
+
 .prevention-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -135,16 +133,7 @@ nav{
     justify-self: center;
     align-self: center;
 }
-.sun{
-    width: 400px;
-    grid-column: 1/3;
-    grid-row: 3/6;
-}
-.desert{
-    width: 400px;
-    grid-column: 7/10;
-    grid-row: 3/5;
-}
+
 footer{
     background-color: #a4643e;
     padding: 25px 50px;
